tests/paczka1/small_fuzzy/95948590.err
Error in line 1: A982 A109 79,8
Error in line 10: fRcPFA A333 15,2
